# Assasim

./: README.md  install.sh
cli/: CMakeLists.txt  command_line_interface.cpp
precompilation/: CMakeLists.txt  precompilation.sh  simulation-dev.sh
precompilation/simulation_basis/: CMakeLists.txt  agent.cpp  agent.hpp  agent_handler.cpp  agent_handler.hpp  heuristics.cpp  heuristics.hpp  interaction.hpp  main.cpp  master.cpp  master.hpp  parameters_generation.hpp  types.cpp  types.hpp  user_interface.cpp  user_interface.hpp  user_interface_model.hpp  utils.hpp
precompilation/simulation_basis/utils/: custom_heap.hpp  fixed_size_multibuffer.hpp  memory.hpp  thread_safe_unordered_map.hpp  thread_safe_vector.hpp
precompilation/src/: analyze_class.cpp  analyze_class.hpp  build_model.cpp  build_model.hpp  error_detection.cpp  error_detection.hpp  export_file.cpp  export_file.hpp  generate_compilable_code.cpp  generate_compilable_code.hpp  main.cpp  master_initialization.cpp  master_initialization.hpp  model.cpp  model.hpp  model_environment.cpp  model_environment.hpp  mpi_func.cpp  mpi_func.hpp  parse_behavior.cpp  parse_behavior.hpp  utils.cpp
